--- a/requirements.txt
+++ b/requirements.txt
@@ -208,6 +208,7 @@ soupsieve==2.6
 SQLAlchemy==2.0.38
 sqlparse==0.5.1
 stack-data==0.6.3
+st_paywall==0.1.8
 streamlit==1.42.2
 streamlit-pdf-viewer==0.0.21
 striprtf==0.0.26
