--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ bcrypt==4.2.1
 beautifulsoup4==4.13.3
 bentoml==1.3.8
 bitarray==2.9.2
+bitsandbytes==0.45.3
 black==24.2.0
 bleach==6.1.0
 blinker==1.9.0
@@ -143,6 +144,7 @@ parsimonious==0.9.0
 parso==0.8.4
 pathspec==0.12.1
 pdfminer==20191125
+pdfplumber==0.11.5
 pexpect==4.9.0
 pillow==10.4.0
 pip-requirements-parser==32.0.1
@@ -169,6 +171,7 @@ pydantic_core==2.27.2
 Pygments==2.17.2
 pygments-lexer-solidity==0.7.0
 pyOpenSSL==24.2.1
+pymupdf==1.25.3
 pyparsing==3.2.0
 pypdf==5.3.0
 pyshadow==0.0.5
