--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,4 @@
-testing_mode = true
+testing_mode = false
 payment_provider = "bmac" #bmac if using Buy Me A Coffee
 stripe_api_key_test = "sk_test_" #only needed if using Stripe
 stripe_api_key = "sk_live" #only needed if using Stripe
